--- a/apache_content/index.html
+++ b/apache_content/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Docker Apache Challenge</title>
-		<meta charset="UTF-8">
-		<meta name="author" content="Anthony Tilelli">
-		<style>
-		  body {
-					background-color: ghostwhite;
-			}
-			.center{
-				background-color: burlywood;
-				text-align: center;
-				padding: 15px 10px;
-				max-width: 650px;
-				margin:  50px auto;
-				border: 2px groove burlywood;
+    <title>Docker Apache Demo</title>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Anthony Tilelli" />
+    <style>
+      body {
+        background-color: ghostwhite;
+      }
+      .center {
+        background-color: burlywood;
+        text-align: center;
+        padding: 15px 10px;
+        max-width: 650px;
+        margin: 50px auto;
+        border: 2px groove burlywood;
         border-radius: 30px;
-			}
-			h1 { color: maroon } 
-  </style>
-</head>
+      }
+      h1 {
+        color: maroon;
+      }
+    </style>
+  </head>
 
   <body>
     <div class="center">
-				<h1>Docker Apache Challenge</h1>
-				<p>This is an Apache server running in Docker<p>
+      <h1>Docker Apache Demo</h1>
+      <p>This is an Apache server running in Docker</p>
+      <p></p>
     </div>
   </body>
 </html>
